--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typed.js": "^2.0.12"
+    "typed.js": "^2.0.12",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "sass": "^1.58.2"
